2010-05-28  Romain Francois <romain@r-enthusiasts.com>

	* R/cppfunction.R: withdrawn, we now use inline::cxxfunction which is
	more flexible and we no longer need to depend on inline
	* man/cppfunction.Rd: *
	
	* inst/unitTests/runTests.R: The tests now require a recent version 
	of inline (>= 0.3.4.2)
	
2010-05-27  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/Module.h: adding support for registering a free function
	that takes a pointer to the class of the wrapped object as first argument
	in class_

2010-05-26  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/Module.h: 
	* src/Module.cpp : limited support for exposing c++ classes in Rcpp modules
	
	* R/Module.R : classes "C++Class", "C++Object" holding external pointers
	and $ method dispatching internally

2010-05-24  Dirk Eddelbuettel  <edd@debian.org>

	* src/Rcpp*.cpp: Moved template code from the older API to headers
	headers in inst/include/*.h; removed empty source files

2010-05-21  Romain Francois <romain@r-enthusiasts.com>

	* R/exceptions.R: rework rcpp_tryCatch to prevent evaluating the
	expression too early (reported by Doug Bates on Rcpp-devel)

	* src/Evaluator.cpp: rework Evaluator::run() so that it correctly
	evaluates inside an environment (reported by Doug Bates on
	Rcpp-devel)

2010-05-20  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/Vector.h : correct throw specs for
	vector_from_string (reported by Brian Ripley from solaris)

	* inst/include/Rcpp/internal/Proxy_Iterator.h: fixed constness of
	several operators in Proxy_Iterator to try to suite suncc/solaris

	* inst/include/Rcpp/config.h: define RCPP_ENABLE_MODULES to hide
	the experimental module features from the official api

	* R/getDLL.R: removed and promoted to getDynLib in inline

2010-05-19  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/as.h: add throw specification to as
	specialization, reported by suncc compiler on CRAN checks
