@@ -8,11 +8,14 @@ Retrieves an Rcpp module from a dynamic library, usually associated with a
 package.
 }
 \usage{
-Module(module, PACKAGE)
+Module(module, PACKAGE = getPackageName(where), where = topenv(parent.frame()) )
 }
 \arguments{
 \item{module}{Name of the module, as declared in the \code{RCPP_MODULE} macro internally}
 \item{PACKAGE}{Passed to \code{\link{getNativeSymbolInfo}}}
+\item{where}{When the module is loaded, S4 classes are defined based on the 
+	internal classes. This argument is passed to \code{\link{setClass}}
+}
 }
 \value{
 	An object of class \linkS4class{Module} collecting functions 
